Third Year/Second Semester/Compiladores/Pratica/Bloco 2 Introdução ao ANTLR-20250222/bloco2/b2_04/SuffixCalculator.g4
grammar SuffixCalculator;

program: stat* EOF;

stat: expr? NEWLINE ;

expr: expr expr op=('*'|'-'|'+'|'/')    #ExprSuffix 
    | Number                            #ExprNumber
;
Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
